--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,19 +1,24 @@
 html {
+  position: relative; 
   background:#d5d5d7
 }
 
 body{
-  position:absolute;
+  position:block;
   width: 91%;
   left: 4%;
+  right: 4%;
+  background-color:#ffffff;  
   }
 
     /*..........................navigation......................*/     
 .header {
-  width: 91%;
+  position:block;
+  width: 87%;
+  left: 4%;
+  right:4%;
+  padding:5em;
   background:#f4f2f3; 
-  display:block;
-  padding: 5em;
   color:#000000;
   }
     #nav li{
@@ -175,15 +180,15 @@ i:hover {
 #copyright{width:85em; margin:0em; padding:1em; }
 #copyright{color:#232323; font-size:10pt; text-transform: none;}
 #copyright p{margin:-1em;}
-#copyright a{ margin-top:8px;}
+#copyright a{ margin-top:1em;}
 
 #copyright a #one #two #tree {width:5%;}
-#one{margin-right: 3px; float:right;}
-#one:hover{margin-right: 3px; float:right; background-color:#00A0D4; -webkit-border-radius:100%; box-shadow:0px 1px 1px 2px #000000; }
-#two{margin-right: 3px; float:right;}
-#two:hover{margin-right: 3px; float:right; background-color:#00A0D4; -webkit-border-radius:100%; box-shadow:0px 1px 1px 2px #000000;}
-#tree{margin-right: 3px; float:right;} 
-#tree:hover{margin-right: 3px; float:right; background-color:#00A0D4; -webkit-border-radius:100%; box-shadow:0px 1px 1px 2px #000000;}
+#one{margin-right: 1em; float:right;}
+#one:hover{margin-right: 1em; float:right; background-color:#00A0D4; -webkit-border-radius:100%; box-shadow:0px 1px 1px 2px #000000; }
+#two{margin-right: 1em; float:right;}
+#two:hover{margin-right: 1em; float:right; background-color:#00A0D4; -webkit-border-radius:100%; box-shadow:0px 1px 1px 2px #000000;}
+#tree{margin-right: 1em; float:right;} 
+#tree:hover{margin-right: 1em; float:right; background-color:#00A0D4; -webkit-border-radius:100%; box-shadow:0px 1px 1px 2px #000000;}
 
 
     /*..........................footer..........................*/    
